# rust-fem-renderer

./: B_full.txt  Cargo.toml  README.md
assets/: UV_test.txt  solution_test.txt
assets/mesh/: mesh.txt  mesh_H10.txt  mesh_tiniest.txt  mesh_tiniest_copy.txt  mesh_tiny.txt
assets/problem/: problem.txt  problem_tiniest.txt  problem_tiniest_copy.txt  problem_tiny.txt
assets/shaders/: shader.wgsl
assets/solution/: UV.txt  UV_H10.txt  UV_test.txt  UV_tiniest.txt  UV_tiny.txt  solution_H10.txt
src/: main.rs  program.rs  resources.rs
src/fem/: fem_io.rs  mod.rs
src/glfem/: color_maps.rs  error.rs  mesh_renderer.rs  mod.rs  text.rs
src/solver/: assembler.rs  full_solver.rs  mod.rs
