[package]
name = "graphics-attempt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.30.3", features = ["rwh_05"] }
env_logger = "0.10"
log = "0.4"
wgpu = "24.0"
pollster = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
anyhow = "1.0"
cgmath = "0.18"
glyphon = "0.8.0"
rand = "0.9.0"